Fixed in svn version

   * PHonon: problem with the D_4h group when the matrices of the group 
     are not in the same order as in the routine cubicsym
   * Yet another LDA+CPU+U fix: forces were wrong in spin-polarized case 
   * PW was not stopping anymore when two inconsistent dft were given
   * atomic: default for non-local correlation is set to "   " AND upf%dft 
     is trimmed before being written by write_upf_v2.f90. Therefore older 
     versions of pw will still work if no vdW is present
   * inlc label for vdw-df is set as VDW1, consistently with the comment and 
     needed to avoid matching conflict with VDW2

New in 4.3.1 version:

   * New, improved version of GIPAW (available as a separate package)
   * Effective Screening Medium (Otani and Sugino PRB 73 115407 (2006).
   * CP: faster implementation of LDA+U

Fixed in 4.3.1 version:

   * atomic: behavior of which_augfun='PSQ' made consistent with documentation
   * CP: LDA+U buggy; PLUMED wasn't working
   * Misc compilation and configure problems: line exceeding 132 characters, 
     syntax not accepted by some compilers, pathscale+mpif90 not recognized, 
     etc.
   * PW: nasty out-of-bound bug leading to mysterious crashes or 
     incorrect results in some variable-cell calculations. Also in
     variable-cell: last scf step could crash due to insufficient
     FFT grid if the final cell was larger than the initial one
   * PW: minor bug in damped dynamics (hessian matrix incorrectly reset)
   * PW: bug in LDA+U forces for the Gamma-only case
   * Electron-Phonon code wasn't working any longer in serial execution
   * PH with input variable "fildrho" and D3 were not working due to 
     inconsistencies in the calls to io_pattern
   * PWCOND: fixed bug when the write/read option is used for the case 
     of different leads. 
   * NEB + nonlocal exchange (DF-vdW) or hybrid functionals wasn't working
   * NEB: incorrect parsing of intermediate images fixed